# xmos_reservoirs

./: .gitmodules  CMakeLists.txt  README.md  c.sh  main.cpp
EmbeddedLapack/src/Lapack/F2c/: s_cat.c  s_copy.c
EmbeddedLapack/src/Lapack/Include/: f2c.h
EmbeddedLapack/src/Lapack/Scr/: dgesvd.c
EmbeddedLapack/src/LinearAlgebra/: declareFunctions.h
